syntax = "proto3";

package proto;

option go_package = "github.com/clintjedwards/gofer/proto";

import "gofer_message.proto";

////////////// System Transport Models //////////////

message GetSystemInfoRequest {}
message GetSystemInfoResponse {
  string commit = 1;
  bool dev_mode_enabled = 2;
  string semver = 3;
}

////////////// Namespace Transport Models //////////////

message GetNamespaceRequest {
  string id = 1; // Unique identifier
}
message GetNamespaceResponse { Namespace namespace = 1; }

message ListNamespacesRequest {
  // offset is a pagination parameter that defines where to start when counting
  // the list of objects to return.
  uint64 offset = 1;

  // limit is a pagination parameter that defines how many objects to return
  // per result.
  uint64 limit = 2;
}

message ListNamespacesResponse { repeated Namespace namespaces = 1; }

message CreateNamespaceRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}
message CreateNamespaceResponse { Namespace namespace = 1; }

message UpdateNamespaceRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}
message UpdateNamespaceResponse {}

message DeleteNamespaceRequest {
  string id = 1; // Unique identifier
}
message DeleteNamespaceResponse {}

////////////// Pipeline Transport Models //////////////

message GetPipelineRequest {
  string namespace_id = 1; // Unique namespace identifier
  string id = 2;           // Unique identifier
}
message GetPipelineResponse { Pipeline pipeline = 1; }

message ListPipelinesRequest {
  // offset is a pagination parameter that defines where to start when counting
  // the list of pipelines to return.
  int64 offset = 1;

  // limit is a pagination parameter that defines how many pipelines to return
  // per result.
  int64 limit = 2;
  string namespace_id = 3; // Unique namespace identifier
}
message ListPipelinesResponse { repeated Pipeline pipelines = 1; }

message DisablePipelineRequest {
  string namespace_id = 1; // Unique namespace identifier
  string id = 2;           // Unique namespace identifier
}
message DisablePipelineResponse {}

message EnablePipelineRequest {
  string namespace_id = 1; // Unique namespace identifier
  string id = 2;           // Unique identifier
}
message EnablePipelineResponse {}

message CreatePipelineRequest {
  string namespace_id = 1; // Unique namespace identifier
  PipelineConfig pipeline_config = 2;
}
message CreatePipelineResponse { Pipeline pipeline = 1; }

message UpdatePipelineRequest {
  string namespace_id = 1; // Unique namespace identifier
  PipelineConfig pipeline_config = 2;
}
message UpdatePipelineResponse { Pipeline pipeline = 1; }

message DeletePipelineRequest {
  string namespace_id = 1; // Unique namespace identifier
  string id = 2;           // Pipeline ID
}
message DeletePipelineResponse {}
